fixed button alignment

--- a/src/components/Home/MainHero/_mainHero.scss
+++ b/src/components/Home/MainHero/_mainHero.scss
@@ -400,7 +400,7 @@
       gap: 8px;
       align-items: center;
       cursor: pointer;
-      justify-content: center;
+      justify-content: space-between;
       span {
         color: white;
         font-weight: 600;
